# webassets-elm

./: .gitignore  .landscape.yml  .travis.yml  CHANGELOG  LICENSE  README.md  README.rst  elm-package.json  pyproject.toml  setup.py  tox.ini  webassets_elm.py
.github/workflows/: tests.yml
tests/: Main.elm  elm.json  test_filter.py
webassets_elm/: __init__.py  tests.py
