[project]
name = "webassets-elm"
version = "0.2.1"
description = "Elm filter for webassets"
readme = "README.rst"
license = { text = "MIT" }
authors = [{ name = "Eduardo Cuducos", email = "cuducos@users.noreply.github.com" }]
keywords = ["elm", "webassets", "assets", "django", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "webassets>=2.0,<3",
]

[project.urls]
Repository = "https://github.com/cuducos/webassets-elm"

[dependency-groups]
dev = [
    "pytest-ruff>=0.4.1",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
